# LD47

./: .fdignore  .gitignore  Cargo.toml  README.md  vimrc
.github/workflows/: build-release.yml
docs/: script.md
resources/config/: display.ron  ingame_bindings.ron  menu_bindings.ron
resources/levels/: dev.json  scene_1.json  scene_3.json
resources/settings/: audio.ron  camera.ron  general.ron  objects.ron  player.ron  scenes.ron  tiles.ron
resources/settings/objects/: common.ron
resources/spritesheets/: alarm.ron  bed.ron  boss.ron  bullets.ron  player.ron
resources/spritesheets/scene1/: bg.ron  door.ron  painting.ron  plant.ron  shoes.ron
resources/spritesheets/scene3/: bg.ron  bloodybin.ron  boss_splooch.ron  buttondesk.ron  charlie_dynamic.ron  coffeemachine.ron  coworker_1.ron  door.ron  locker.ron  table_bg.ron  table_boss.ron  table_fg.ron  whiteboard.ron
resources/ui/: ingame.ron  main_menu.ron
src/: main.rs
src/components/: attach_ui.rs  interactable.rs  mod.rs  movement.rs  object.rs  player.rs  text_lines.rs
src/components/events_register/: action_type.rs  condition.rs  event_type.rs  mod.rs  variable_value.rs
src/components/if_actions/: condition.rs  if.rs  if_else_chain.rs  mod.rs
src/components/variables_register/: mod.rs  variable_value.rs
src/init/: init_game_data.rs  mod.rs
src/input/: ingame_bindings.rs  menu_bindings.rs
src/level_loader/: data.rs  load_camera.rs  load_objects.rs  load_player.rs  load_tiles.rs  mod.rs
src/resources/: animation_key.rs  collision_tag.rs  fade.rs  mod.rs  object_spawner.rs  scene_manager.rs  screen_shake.rs  song_key.rs  sound_key.rs  text_output.rs
src/settings/: audio_settings.rs  camera_settings.rs  entity_components.rs  general_settings.rs  hitbox_config.rs  mod.rs  objects_settings.rs  player_settings.rs  scenes_settings.rs  tiles_settings.rs
src/states/: ingame.rs  load_ingame.rs  main_menu.rs  mod.rs  startup.rs
src/systems/: control_player.rs  handle_fade.rs  handle_if_actions.rs  handle_interaction.rs  handle_screen_shake.rs  handle_text_output_scrolling.rs  mod.rs  position_attached_ui.rs  trigger_collision_events.rs  trigger_init_events.rs  trigger_interaction_events.rs  trigger_on_key_events.rs  trigger_timer_events.rs  update_animations.rs  update_text_output.rs
src/systems/handle_events_actions/: mod.rs
tiled/: export-script.js
tiled/tmx/: dev.tmx  scene_1.tmx  scene_3.tmx
tiled/tsx/: colors.tsx  scene1bg.tsx  scene_1_bg.tsx  scene_3_bg.tsx
(+35 files in other folders)
